Fix dark mode color for dropdown group

--- a/shell/assets/styles/themes/_dark.scss
+++ b/shell/assets/styles/themes/_dark.scss
@@ -116,7 +116,7 @@
   --dropdown-hover-bg          : #{$slate};
   --dropdown-disabled-bg       : #{$disabled};
   --dropdown-disabled-text     : #{$disabled};
-  --dropdown-group-text        : #{$disabled};
+  --dropdown-group-text        : #{$lighter};
   --dropdown-highlight-text    : var(--link);
 
   --input-text                 : #{$lightest};
